feat: add websocket and file storage
